fixed image gap

--- a/Gallery/EcoRestoration.html
+++ b/Gallery/EcoRestoration.html
@@ -9,7 +9,7 @@
 
     <title>Sachcha Prayas</title>
     <link rel="icon" type="image/x-icon" href="../public/image/logo.png" />
-    <style>
+    <!-- <style>
         .goog-te-banner-frame {
             display: none !important;
         }
@@ -48,7 +48,7 @@
             cursor: pointer;
             appearance: none;
         }
-    </style>
+    </style> -->
 </head>
 
 <body class="bg-white font-sans leading-normal tracking-normal ">
