added new image and captions

--- a/index.html
+++ b/index.html
@@ -199,16 +199,17 @@
 			<h1 class="font-bold text-3xl">Support Us</h1>
 			<dl class="grid  grid-cols-1 gap-x-4 gap-y-6   md:grid-cols-2 lg:grid-cols-2">
 				<div class="">
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Lorem ipsum, dolor sit amet consectetur
-						adipisicing elit. Labore ratione blanditiis magni aspernatur maiores excepturi, modi atque
-						repudiandae facilis ipsa consequatur voluptas voluptatem eos harum. Consequuntur voluptate
-						consequatur blanditiis eaque!
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">If you're interested in joining our efforts
+						or learning more about our work, feel free to reach out to us. You can attend our programs,
+						participate in discussions, and contribute your ideas to our cause. Together, we can make a
+						positive impact and create a better future for marginalised communities.
+
 					</dd>
 				</div>
 				<!-- image -->
 				<a href="donate.html">
 					<div class="flex lg:justify-end justify-center">
-						<img class="w-40 " src="public/image/icon/Group 7.png" alt="donation logo">
+						<img class="w-40 " src="public/image/icon/donation-logo.png" alt="donation logo">
 					</div>
 				</a>
 			</dl>
@@ -217,11 +218,186 @@
 
 
 
+	<!-- Gallery Card Section  -->
+	<section>
+
+		<div class="lg:px-24 lg:py-8  md:px-24  text-gray-800 text-center lg:text-left p-4  ">
+
+			<!-- animation card 1 -->
+			<div class="grid lg:grid-cols-3 md:grid-cols-2 gap-x-12 gap-y-12 lg:px-12">
+
+				<!-- div-1 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/बच्चों के खेलकूद संबंधी मुद्दों पर बच्चों से संवाद.jpg" />
+					<div class="relative ">
+						<div class="px-6">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12">
+									<p class="text-lg text-white py-20  text-start">
+										Engage in children's sports discussions
+									</p>
+
+
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+
+				<!-- div-2 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/आंगनवाड़ी में स्थापित ग्राम आरोग्य केंद्र को व्यवस्थित करने आशा तथा आंगनबाड़ी वर्कर को दी .JPG" />
+					<div class="relative ">
+						<div class="px-6 ">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12">
+									<p class="text-lg text-white py-20 text-start">
+										Asha and Anganwadi workers authorized to manage the village health center at
+										Anganwadi
+									</p>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+
+				<!-- div-3 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/आदिवासी समुदाय के साथ ग्राम सभा में बच्चों के विभिन्न मुद्दों पर डाले गए प्रस्ताव.JPG" />
+					<div class="relative ">
+						<div class="px-6 ">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12">
+									<p class="text-lg text-white py-20 text-start ">
+										Proposed solutions for children's issues in Tribal Gram Sabha.
+									</p>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+
+				<!-- div-4 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/बच्चों के लिए लोकतंत्र विषय पर बच्चों के मुद्दों पर बच्चों से बातचीत.jpg" />
+					<div class="relative ">
+						<div class="px-6 ">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12">
+									<p class="text-lg text-white py-20 text-start">
+										Discussing Democracy for Children with kids
+									</p>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+
+				<!-- div-5 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/बरगी थाने में स्थापित ऊर्जा हेल्प डेस्क महिला शक्ति समिति को दी गई विशेष ट्रेनिंग.jpg" />
+					<div class="relative ">
+						<div class=" ">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12">
+									<p class="text-lg text-white py-20 text-center">
+										HEALTH EDUCATION
+									</p>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+
+				<!-- div-6 -->
+				<div class="relative block  h-full bg-gray-900 group">
+					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
+					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
+						src="public/image/समाधान आपके द्वारा योजना अंतर्गत विधिक सेवा प्राधिकरण के साथ लगाई गई लोक अदालत.jpg" />
+					<div class="relative ">
+						<div class=" ">
+
+							<div class="transition-all transform
+											translate-x-0 opacity-0
+											group-hover:opacity-100
+											group-hover:translate-x-4">
+
+								<div class="pt-12 flex justify-center">
+									<p class="text-lg text-white py-20 text-center">
+										EcoRestoration
+									</p>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+					<!-- </a> -->
+				</div>
+
+				<!--  -->
+			</div>
+		</div>
+	</section>
+	<!-- Gallery end -->
 
 
 
 	<!-- partners -->
-	<div class=" mx-auto p-8 text-center border-2 shadow-md w-max">
+	<div class=" mx-auto p-8 text-center border-2 border-emerald-900 w-max my-16">
 		<h1 class="text-3xl font-bold mb-6">Our Partners</h1>
 		<div class="grid  lg:grid-cols-6 sm:grid-cols-3 gap-8 ">
 			<!-- Partner Logo 1 -->
@@ -259,266 +435,6 @@
 		</div>
 	</div>
 	<!-- partners end -->
-
-
-	<!-- image section -->
-	<!-- <div class="container mx-auto ">
-		<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 py-12 lg:px-16 px-4">
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					Conversation with Children on Children's Issues under the Democracy Program</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel1.png" alt="THEMES OF INTEREST" loading="lazy">
-
-
-			</div>
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					Organizing Legal Literacy Camp for Women</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel2.png" alt="THEMES OF INTEREST" loading="lazy">
-
-
-			</div>
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					Free Blood Grouping Camp for Adolescent Children in the Institution</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel3.png" alt="THEMES OF INTEREST" loading="lazy">
-			</div>
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					hi there</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel4.png" alt="THEMES OF INTEREST" loading="lazy">
-
-
-			</div>
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					hi there</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel1.png" alt="THEMES OF INTEREST" loading="lazy">
-
-
-			</div>
-			<div class="group relative">
-				<div
-					class="invisible group-hover:visible absolute inset-0 bg-blue-500 text-white flex justify-center items-center transition-all duration-300 px-6">
-					hi there</div>
-
-
-				<img class="w-full" src="public/image/gallery/carousel2.png" alt="THEMES OF INTEREST" loading="lazy">
-
-
-			</div>
-		</div>
-	</div> -->
-	<!-- image section end -->
-
-
-	<!-- Gallery Card Section  -->
-	<section class="bg-white">
-
-		<div class="lg:px-24 lg:py-8  md:px-24 bg-white text-gray-800 text-center lg:text-left p-4  ">
-
-			<!-- animation card 1 -->
-			<div class="grid lg:grid-cols-3 md:grid-cols-2 gap-x-12 gap-y-12 lg:px-12">
-
-				<!-- div-1 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-30.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										WOMEN EMPOWERMENT
-									</p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-
-				<!-- div-2 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-23.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										CHILD DEVELOPMENT
-									</p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-
-				<!-- div-3 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-23.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										SPECIALLY ABELED
-									</p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-
-				<!-- div-4 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-23.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										LEGAL AID </p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-
-				<!-- div-5 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-23.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										HEALTH EDUCATION
-									</p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-
-				<!-- div-6 -->
-				<div class="relative block  h-full bg-gray-900 group">
-					<!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
-					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-						src="public/image/gallery/gallery-img-23.JPG" />
-					<div class="relative p-5">
-						<div class=" px-2">
-
-							<div class="transition-all transform
-											translate-x-0 opacity-0
-											group-hover:opacity-100
-											group-hover:translate-x-8">
-
-								<div class="pt-12">
-									<p class="text-lg text-white py-16 text-start">
-										EnvRestoration
-									</p>
-									<!-- <button class="px-4 py-2 text-sm
-														text-white bg-red-800">
-										Click Me
-									</button> -->
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<!-- </a> -->
-				</div>
-
-				<!--  -->
-			</div>
-		</div>
-	</section>
-	<!-- Gallery end -->
-
-
 
 
 	<!-- footer  -->
