--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
 						src="public/image/बरगी थाने में स्थापित ऊर्जा हेल्प डेस्क महिला शक्ति समिति को दी गई विशेष ट्रेनिंग.jpg" />
 					<div class="relative ">
-						<div class=" ">
+						<div class="px-6 ">
 
 							<div class="transition-all transform
 											translate-x-0 opacity-0
@@ -349,8 +349,8 @@
 											group-hover:translate-x-4">
 
 								<div class="pt-12">
-									<p class="text-lg text-white py-20 text-center">
-										HEALTH EDUCATION
+									<p class="text-lg text-white py-20 text-start">
+										Training for Mahila Shakti Samiti's Energy Help Desk at Bargi Police Station
 									</p>
 
 								</div>
@@ -368,16 +368,17 @@
 					<img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
 						src="public/image/समाधान आपके द्वारा योजना अंतर्गत विधिक सेवा प्राधिकरण के साथ लगाई गई लोक अदालत.jpg" />
 					<div class="relative ">
-						<div class=" ">
+						<div class="px-6 ">
 
 							<div class="transition-all transform
 											translate-x-0 opacity-0
 											group-hover:opacity-100
 											group-hover:translate-x-4">
 
-								<div class="pt-12 flex justify-center">
-									<p class="text-lg text-white py-20 text-center">
-										EcoRestoration
+								<div class="pt-12">
+									<p class="text-lg text-white py-20 text-start">
+										Lok adalat set up by the Legal Services Authority under the schem of solution by
+										you
 									</p>
 
 								</div>
