--- a/team.html
+++ b/team.html
@@ -336,10 +336,9 @@
 	<!-- Team Section End -->
 
 
-
+	
 
 	<!-- footer  -->
-
 	<div class="border-4 border-orange-400 border-back-color"></div>
 
 	<footer class="bg-white p-4 text-white" aria-labelledby="footer-heading">
@@ -417,7 +416,7 @@
 	</footer>
 
 
-
+	<!-- translator -->
 	<script type="text/javascript">
 		function googleTranslateElementInit() {
 			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
@@ -426,6 +425,7 @@
 
 	<script type="text/javascript"
 		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 
 </body>
 
