--- a/about.html
+++ b/about.html
@@ -118,7 +118,10 @@
                     Our Story
                 </h1>
                 <p class="mx-auto text-justify text-base mb-6  lg:px-12">
-                    Sachcha Prayas Sanstha's journey traces back to the idea of providing tailoring training in Gram Panchayat Harduli Bargi Nagar during 2007-2008. Officially registered under the Society Act on November 17, 2009, our organisation embarked on its mission with a steadfast commitment despite initial resource limitations.
+                    Sachcha Prayas Sanstha's journey traces back to the idea of providing tailoring training in Gram
+                    Panchayat Harduli Bargi Nagar during 2007-2008. Officially registered under the Society Act on
+                    November 17, 2009, our organisation embarked on its mission with a steadfast commitment despite
+                    initial resource limitations.
 
                 </p>
             </div>
@@ -181,10 +184,10 @@
             </div>
     </section>
     <!--end early success and mile stone -->
-            <div class="flex justify-center">
+    <div class="flex justify-center">
 
-                <div class="border-2 border-orange-400 border-back-color w-1/2 "></div>
-            </div>
+        <div class="border-2 border-orange-400 border-back-color w-1/2 "></div>
+    </div>
     <!-- Current Scenario and Challenges -->
     <section>
         <div class="container mx-auto lg:px-6 px-4 lg:py-12 py-4   lg:text-left  mt-4 lg:mt-0">
@@ -194,13 +197,37 @@
                     Current Scenario and Challenges
                 </h1>
                 <p class="mx-auto text-justify text-base mb-6 px-12">
-                    Currently, Sachcha Prayas Sanstha continues to focus on women's empowerment and child rights
-                    advocacy. It collaborates with various organisations like Madhya Pradesh Sustainable Development and
-                    numerous government and non-government entities.
+                    Currently, Sachcha Prayas Sanstha continues to focus on women's empowerment through livelihood
+                    training. The livelihood training has expanded to include hand embroidery and beautician skills.
+                </p>
 
-                    Since our inception in 2009 we have faced many hurdles. Currently, we face challenges such as
-                    shortage of technical staff, resources, and regular funding. Despite this, we are actively
-                    addressing these issues to improve our documentation and streamline our operations.
+                <p class="mx-auto text-justify text-base mb-6 px-12">
+                    Along with other rural panchayat initiatives surrounding education and health, we have also ventured
+                    into legal aid, with a focus on child rights advocacy.
+
+                </p>
+
+                <p class="mx-auto text-justify text-base mb-6 px-12">
+                    Since our inception in 2009, we have faced many hurdles. Currently, our challenges include:
+
+                <ul class="mx-auto text-justify text-base mb-6 px-20">
+                    <li class="list-disc ">
+                        Lack/Shortage of technical staff
+
+                    </li>
+                    <li class="list-disc  ">
+                        Shortage of resources
+                    </li>
+                    <li class="list-disc  ">
+                        Regular & reliable funding
+                    </li>
+                </ul>
+                </p>
+
+                <p class="mx-auto text-justify text-base mb-6 px-12">
+                    The immediate projected goal for the organisation is to make 200 women self-reliant through
+                    employment-oriented initiatives and create a positive atmosphere for child rights advocacy in at
+                    least 10 Gram Panchayats.
                 </p>
             </div>
     </section>
@@ -240,31 +267,33 @@
                         class="grid lg:grid-cols-3 md:grid-cols-3 gap-2 flex items-center justify-center gap-x-6 p-2  ">
 
                         <div class="flex flex-col justify-start items-center ">
-                            <img src="./public/image/icon/volunteer.png"
-                                alt="Lack of understanding of" class="icon-size h-20">
+                            <img src="./public/image/icon/volunteer.png" alt="Lack of understanding of"
+                                class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Volunteer</h3>
                             <p>
-                                Individuals can become members of our organisation, attend our programs, and contribute their valuable insights.
+                                Individuals can become members of our organisation, attend our programs, and contribute
+                                their valuable insights.
                             </p>
                         </div>
 
                         <div class="flex flex-col justify-start items-center">
-                            <img src="./public/image/icon/love.png"
-                                alt="Inability to
+                            <img src="./public/image/icon/love.png" alt="Inability to
                                 exercise and enforce their right" class="icon-size h-20">
-                            <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Spread Awareness</h3>
+                            <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Spread
+                                Awareness</h3>
                             <p>
                                 Sharing our work on social platforms can help us reach a wider audience.
                             </p>
                         </div>
 
                         <div class="flex flex-col justify-start items-center">
-                            <img src="./public/image/icon/donation.png"
-                                alt="Failure of the state to deliver justice" class="icon-size h-20">
+                            <img src="./public/image/icon/donation.png" alt="Failure of the state to deliver justice"
+                                class="icon-size h-20">
                             <h3 class="heading-font-family font-bold text-sm text-color pt-2 text-center">Donate</h3>
                             <p>
-                                Your help makes us better at helping people who need it. Let's work together to make a difference
-                            </p>
+                                Your financial support can further strengthen our initiatives to provide better
+                                resources and opportunities for the marginalised communities we serve. Together, we can
+                                create lasting change and uplift the lives of those in need. </p>
 
                         </div>
 
@@ -279,7 +308,7 @@
 
         </div>
     </div>
-</section>
+    </section>
 
     <!-- end How You Can Help -->
 
