--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 						</p>
 					</dt>
 					<dd class="mt-2 text-justify leading-7 text-gray-700 ">Our mission is to empower marginalised
-						segments of society, with a special emphasis on women and children. We are dedicated to helping
-						them access knowledge and information, equipping them to lead empowered and dignified lives.
+						segments of society, especially women and children in Harduli Bargi region. We are dedicated to
+						equipping them to lead dignified lives by providing access to knowledge, information and
+						opportunities.
 					</dd>
 				</div>
 
@@ -159,9 +160,10 @@
 						<p class="p-2 text-3xl font-bold tracking-tight  sm:text-2xl  text-gray-900 text-center">Vision
 						</p>
 					</dt>
-					<dd class="mt-2 text-justify leading-7 text-gray-700 ">We envision a society where every individual,
-						with a special focus on women and children, experiences a life of dignity, enjoying equitable
-						access to essential services encompassing health, education, and basic needs.
+					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
+						We envision a society where every marginalised individual experiences a life of dignity,
+						enjoying equitable access to essential services encompassing health, education, and basic needs.
+
 
 					</dd>
 				</div>
@@ -176,11 +178,10 @@
 						</p>
 					</dt>
 					<dd class="mt-2 text-justify leading-7 text-gray-700 ">
-						Our project aspires to cultivate empowered women, girls and children through the promotion of
-						income-generating skills, raising awareness, and improving access to basic rights. Our ultimate
-						goal is to nurture a sense of environmental security, enhance overall health, and promote legal
-						literacy. Through these endeavours, we aim to contribute to the creation of a community that is
-						both sustainable and empowered.
+						Our ultimate goal is to nurture a sense of environmental security, enhance overall health, and
+						promote legal and skill-based literacy among women and children. Through these endeavours, we
+						aim to contribute to the creation of a community that is both sustainable and empowered.
+
 					</dd>
 				</div>
 
