added new images,

--- a/Gallery/awards-acheivements.html
+++ b/Gallery/awards-acheivements.html
@@ -94,7 +94,7 @@
                     href="../team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="../new-gallery.html">Gallery</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="../donate.html">Donate</a>
@@ -110,8 +110,8 @@
 
 
     <!-- Awards and achivements -->
-    <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Award and Achivements</h2>
+    <div class="bg-white my-16">
+        <h2 class="pt-24 text-center text-3xl">Award and Achivements</h2>
 
         <div class="mx-auto container px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
