--- a/Gallery/Legal-aid.html
+++ b/Gallery/Legal-aid.html
@@ -94,7 +94,7 @@
                     href="../team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="../new-gallery.html">Gallery</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="../donate.html">Donate</a>
@@ -110,15 +110,15 @@
 
 
     <!-- Legal Aid -->
-    <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Legal Aid</h2>
+    <div class="bg-white my-16">
+        <h2 class="pt-24 text-center text-3xl">Legal Aid</h2>
 
         <div class="mx-auto container px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
             <div class="grid grid-cols-1 gap-x-8 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-47.JPG"
+                    <img src="../public/image/legal-aid/carousel4.png"
                         alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -126,7 +126,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-50.jpg"
+                    <img src="../public/image/legal-aid/gallery-img-11.JPG"
                         alt="Olive drab green insulated bottle with flared screw lid and flat top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -134,7 +134,14 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-52.JPG"
+                    <img src="../public/image/legal-aid/gallery-img-52.jpg"
+                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/legal-aid/gallery-img-13.JPG"
                         alt="Person using a pen to cross a task off a productivity paper card."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -142,10 +149,19 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-53.JPG"
+                    <img src="../public/image/legal-aid/gallery-img-47.jpg"
+                        alt="Person using a pen to cross a task off a productivity paper card."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+
+
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/legal-aid/gallery-img-14.JPG"
                         alt="Hand holding black machined steel mechanical pencil with brass tip and top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
+
 
                 </a>
 
