--- a/Gallery/specially-abled.html
+++ b/Gallery/specially-abled.html
@@ -94,7 +94,7 @@
                     href="../team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="../new-gallery.html">Gallery</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="../donate.html">Donate</a>
@@ -110,23 +110,29 @@
 
 
     <!--specially abled-->
-    <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Specially Abled</h2>
+    <div class="bg-white my-16">
+        <h2 class="pt-24 text-center text-3xl ">Specially Abled</h2>
 
         <div class="mx-auto container px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
             <div class="grid grid-cols-1 gap-x-8 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-6.JPG"
+                    <img src="../public/image/specially-abled/दिव्यांग जनों को निशुल्क उपकरण प्रदान करते हुए.jpg"
                         alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
 
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/specially-abled/gallery-img-30.JPG"
+                        alt="Person using a pen to cross a task off a productivity paper card."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-30.JPG"
+                    <img src="../public/image/specially-abled/दिव्यांग भाई बहनों को बांटे गए निशुल्क सहायक उपकरण 2.jpg"
                         alt="Olive drab green insulated bottle with flared screw lid and flat top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -134,7 +140,24 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-31.JPG"
+                    <img src="../public/image/specially-abled/दिव्यांगजनों को बांटे निशुल्क सहायक उपकरण.jpg"
+                        alt="Person using a pen to cross a task off a productivity paper card."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+
+
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/specially-abled/gallery-img-31.JPG"
+                        alt="Person using a pen to cross a task off a productivity paper card."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+
+
+
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/specially-abled/निशुल्क उपकरण पाकर खिले दिव्यांग भाई बहनों के चेहरे 4.jpg"
                         alt="Person using a pen to cross a task off a productivity paper card."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
