--- a/Gallery/women-empowerment.html
+++ b/Gallery/women-empowerment.html
@@ -9,46 +9,7 @@
 
     <title>Sachcha Prayas</title>
     <link rel="icon" type="image/x-icon" href="../public/image/logo.png" />
-    <!-- <style>
-        .goog-te-banner-frame {
-            display: none !important;
-        }
 
-        #google_translate_element select {
-            background-color: #ffffff;
-            color: rgb(220 38 38);
-            border: none;
-            width: 115px;
-            overflow: hidden;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 6px 8px
-        }
-
-        .goog-logo-link {
-            display: none !important;
-        }
-
-        .goog-te-gadget {
-            color: transparent !important;
-        }
-
-        .VIpgJd-ZVi9od-l4eHX-hSRGPd {
-            display: none !important;
-        }
-
-        .goog-te-combo {
-            width: 202px;
-            overflow: hidden;
-            border: 1px solid #009e4d;
-            border-radius: 5px;
-            padding: 10px;
-            background-color: #f7f7f7;
-            color: #13b95a;
-            cursor: pointer;
-            appearance: none;
-        }
-    </style> -->
 </head>
 
 <body class="bg-white font-sans leading-normal tracking-normal ">
@@ -94,7 +55,7 @@
                     href="../team.html">Team</a>
 
                 <a class=" px-4 py-2 mt-2 nav-link-color text-lg  bg-transparent rounded-lg hover:text-red-600 hover:bg-gray-50    md:mt-0 md:ml-4  focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                    href="#">Gallery</a>
+                    href="../new-gallery.html">Gallery</a>
 
                 <a class=" px-4 py-2 mt-2  text-lg  bg-transparent rounded-lg text-red-600 bg-gray-100    md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900  focus:bg-gray-200 focus:outline-none focus:shadow-outline "
                     href="../donate.html">Donate</a>
@@ -110,15 +71,15 @@
 
 
     <!-- Women empowerment -->
-    <div class="bg-white">
-        <h2 class="pt-12 text-center text-3xl">Women Empowerment</h2>
+    <div class="bg-white my-16">
+        <h2 class="pt-24 text-center text-3xl">Women Empowerment</h2>
 
         <div class="mx-auto container px-4 py-12 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 
             <div class="grid grid-cols-1 gap-x-8 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 ">
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-1.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-1.JPG"
                         alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -126,7 +87,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-4.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-28.JPG"
                         alt="Olive drab green insulated bottle with flared screw lid and flat top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -134,7 +95,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-9.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-29.JPG"
                         alt="Person using a pen to cross a task off a productivity paper card."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -142,7 +103,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-16.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-32.JPG"
                         alt="Hand holding black machined steel mechanical pencil with brass tip and top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -150,7 +111,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-24.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-10.JPG"
                         alt="Person using a pen to cross a task off a productivity paper card."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -158,7 +119,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-16.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-33.JPG"
                         alt="Person using a pen to cross a task off a productivity paper card."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -166,7 +127,7 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-38.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-4.JPG"
                         alt="Hand holding black machined steel mechanical pencil with brass tip and top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
@@ -174,10 +135,20 @@
 
                 <div
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
-                    <img src="../public/image/gallery/gallery-img-28.JPG"
+                    <img src="../public/image/women-empowerment/gallery-img-8.JPG"
                         alt="Hand holding black machined steel mechanical pencil with brass tip and top."
                         class="h-full w-full object-cover object-center group-hover:opacity-75">
                 </div>
+
+
+
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7 shadow-lg">
+                    <img src="../public/image/women-empowerment/gallery-img-9.JPG"
+                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                        class="h-full w-full object-cover object-center group-hover:opacity-75">
+                </div>
+
 
             </div>
         </div>
