--- a/new-gallery.html
+++ b/new-gallery.html
@@ -9,7 +9,7 @@
 
     <title>Sachcha Prayas</title>
     <link rel="icon" type="image/x-icon" href="public/image/logo.png" />
-   
+
 </head>
 
 <body class="bg-white font-sans leading-normal tracking-normal ">
@@ -91,11 +91,11 @@
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        WOMEN EMPOWERMENT
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        Women Empowerment
                                     </p>
 
                                     <button class="px-4 py-2 text-sm
@@ -103,6 +103,22 @@
                                         <a href="Gallery/women-empowerment.html"> See More</a>
                                     </button>
 
+                                </div> -->
+
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Women Empowerment
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/women-empowerment.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -122,16 +138,32 @@
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        CHILD DEVELOPMENT
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        Child Development
                                     </p>
                                     <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
                                         <a href="Gallery/child-development.html"> See More</a>
                                     </button>
+                                </div> -->
+
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Child Development
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/child-development.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -152,16 +184,32 @@
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        SPECIALLY ABELED
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        Specially Abled
                                     </p>
                                     <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
                                         <a href="Gallery/specially-abled.html"> See More</a>
                                     </button>
+                                </div> -->
+
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Specially Abled
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/specially-abled.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -175,22 +223,37 @@
                 <div class="relative block  h-full bg-gray-900 group">
                     <!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
                     <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                        src="public/image/gallery/थाने में महिलाओं के लिए लीगल लिटरेसी कैंप का आयोजन.jpg" />
+                        src="public/image/legal-aid/थाने में महिलाओं के लिए लीगल लिटरेसी कैंप का आयोजन.jpg" />
                     <div class="relative p-5">
                         <div class=" px-2">
 
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        LEGAL AID </p>
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        Legal Aid</p>
                                     <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
                                         <a href="Gallery/Legal-aid.html"> See More</a>
                                     </button>
+                                </div> -->
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Legal Aid
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/Legal-aid.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -206,16 +269,16 @@
                     <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
                         src="public/image/gallery/विद्यालयों में बाल अधिकारों के मुद्दों पर आयोजित कार्यक्रम 2.jpg" />
                     <div class="relative p-5">
-                        <div class=" px-2">
+                        <div class=" px-6">
 
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        HEALTH EDUCATION
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        Health Education
                                     </p>
 
                                     <button class="px-4 py-2 text-sm
@@ -223,6 +286,21 @@
                                         <a href="Gallery/Health-Education.html"> See More</a>
                                     </button>
 
+                                </div> -->
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Health Education
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/Health-Education.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -236,23 +314,39 @@
                 <div class="relative block  h-full bg-gray-900 group">
                     <!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
                     <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
-                        src="public/image/gallery/संस्था द्वारा चलाया गया पौधारोपण अभियान.jpg" />
+                        src="public/image/eco-restoration/पौधारोपण अभियान के अंतर्गत विद्यालय परिसर में रोपे गए पौधे.jpg" />
                     <div class="relative p-5">
                         <div class=" px-2">
 
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
                                         EcoRestoration
                                     </p>
                                     <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
                                         <a href="Gallery/EcoRestoration.html"> See More</a>
                                     </button>
+                                </div> -->
+
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        EcoRestoration
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/EcoRestoration.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -273,16 +367,31 @@
                             <div class="transition-all transform
                                                 translate-x-0 opacity-0
                                                 group-hover:opacity-100
-                                                group-hover:translate-x-8">
+                                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        NEWS MEDIA
+                                <!-- <div class="pt-12">
+                                    <p class="text-lg text-white py-8 text-center">
+                                        News Media
                                     </p>
                                     <button class="px-4 py-2 text-sm
                                                             text-white bg-red-800">
                                         <a href="Gallery/news-media.html"> See More</a>
                                     </button>
+                                </div> -->
+
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        News Media
+                                    </p>
+
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
+
+                                            <a href="Gallery/news-media.html"> See More</a>
+
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -297,25 +406,27 @@
                     <!-- <a class="relative block  h-full bg-gray-900 group" href="##"> -->
                     <img class="absolute inset-0 object-cover  w-full h-full group-hover:opacity-50"
                         src="public/image/certificates/certi 2.jpg" />
-                    <div class="relative p-5">
-                        <div class=" px-2">
+                    <div class="relative p-10">
+                        <div class="">
 
                             <div class="transition-all transform
                                 translate-x-0 opacity-0
                                 group-hover:opacity-100
-                                group-hover:translate-x-8">
+                                group-hover:translate-x-2">
 
-                                <div class="pt-12">
-                                    <p class="text-lg text-white py-8 text-start">
-                                        AWARDS AND ACHIEVEMENTS
+                                <div class="py-12 ">
+                                    <p class="text-lg text-white py-6 text-center">
+                                        Awards and Achievements
                                     </p>
-                                    <button class="px-4 py-2 text-sm
-                                            text-white bg-red-800">
 
-                                        <a href="Gallery/awards-acheivements.html"> See More</a>
+                                    <div class="flex justify-center">
+                                        <button class="p-3 text-sm
+                                    text-white bg-red-800 ">
 
-                                    </button>
+                                            <a href="Gallery/awards-acheivements.html"> See More</a>
 
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
 
@@ -323,8 +434,9 @@
                     </div>
                     <!-- </a> -->
                 </div>
-
                 <!--  -->
+
+
             </div>
         </div>
     </section>
