--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -180,7 +180,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -246,7 +246,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -305,7 +305,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -378,7 +378,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -427,7 +427,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -475,7 +475,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -539,7 +539,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -598,7 +598,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -659,7 +659,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -714,7 +714,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -764,7 +764,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
@@ -815,7 +815,7 @@
 								<div class="modal-action text-center">
 									<form method="dialog">
 										<button class="btn">
-											<img class="w-10" src="public/image/icon/close (1).png" alt="">
+											<img class="w-10" src="public/image/icon/cancel.png" alt="">
 										</button>
 
 									</form>
