spelling and submit form

--- a/contact.html
+++ b/contact.html
@@ -115,8 +115,9 @@
 
         </div>
 
+
         <!-- form -->
-        <form action="https://formsubmit.co/your@email.com" method="POST" class="mx-auto mt-14 max-w-xl sm:mt-20">
+        <form action="https://formsubmit.co/prayasjbp23@yahoo.in" method="POST" class="mx-auto mt-14 max-w-xl sm:mt-20">
             <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
                 <div>
                     <label for="first-name" class="block text-sm font-semibold leading-6 text-gray-900">First
