--- a/team.html
+++ b/team.html
@@ -278,6 +278,50 @@
 
 
 
+				<!-- 5 Team -->
+				<li class="flex justify-center bg-gray-100 flex-col p-4 rounded-2xl shadow-lg mb-8">
+
+
+					<button class="btn p-4 rounded-t-lg " onclick="my_modal_5.showModal()">
+
+						<img class="aspect-[2/2] rounded-full p-12  "
+							src="public/image/team/Anil raikwar vice precedent .jpg" alt="">
+
+						<h1 class="text-2xl text-center">
+							Anil raikwar
+						</h1>
+						<h4 class="text-second text-center">
+							Vice President
+						</h4>
+					</button>
+
+					<dialog id="my_modal_5" class="modal bg-zinc-50 text-black p-6 max-w-2xl">
+						<div class="modal-box">
+							<!-- <h3 class="font-bold text-lg">Hello!</h3> -->
+							<div class="flex justify-between">
+								<h3 class="font-bold text-lg">Anil raikwar</h3>
+
+								<div class="modal-action text-center">
+									<form method="dialog">
+										<button class="btn">
+											<img class="w-10 border-2" src="public/image/icon/close (2).png" alt="">
+										</button>
+
+									</form>
+								</div>
+							</div>
+							<p class="py-4">Press the ESC key or click the button below to close. Lorem ipsum dolor, sit
+								amet consectetur
+								adipisicing elit. Error ab dolores, non sunt debitis nihil ea in hic ad est ut
+								perferendis
+								deleniti
+								dolorum exercitationem fugit inventore dolor, tempore natus.</p>
+
+						</div>
+					</dialog>
+				</li>
+
+
 				<!-- 4 Team -->
 				<li class="flex justify-center bg-gray-100 flex-col p-4 rounded-2xl shadow-lg mb-8">
 
@@ -352,54 +396,6 @@
 
 
 
-				<!-- 5 Team -->
-				<li class="flex justify-center bg-gray-100 flex-col p-4 rounded-2xl shadow-lg mb-8">
-
-
-					<button class="btn p-4 rounded-t-lg " onclick="my_modal_5.showModal()">
-
-						<img class="aspect-[2/2] rounded-full p-12  "
-							src="public/image/team/Anil raikwar vice precedent .jpg" alt="">
-
-						<h1 class="text-2xl text-center">
-							Anil raikwar
-						</h1>
-						<h4 class="text-second text-center">
-							Vice President
-						</h4>
-					</button>
-
-					<dialog id="my_modal_5" class="modal bg-zinc-50 text-black p-6 max-w-2xl">
-						<div class="modal-box">
-							<!-- <h3 class="font-bold text-lg">Hello!</h3> -->
-							<div class="flex justify-between">
-								<h3 class="font-bold text-lg">Anil raikwar</h3>
-
-								<div class="modal-action text-center">
-									<form method="dialog">
-										<button class="btn">
-											<img class="w-10 border-2" src="public/image/icon/close (2).png" alt="">
-										</button>
-
-									</form>
-								</div>
-							</div>
-							<p class="py-4">Press the ESC key or click the button below to close. Lorem ipsum dolor, sit
-								amet consectetur
-								adipisicing elit. Error ab dolores, non sunt debitis nihil ea in hic ad est ut
-								perferendis
-								deleniti
-								dolorum exercitationem fugit inventore dolor, tempore natus.</p>
-							<!-- <div class="modal-action text-center">
-								<form method="dialog">
-									<button class="btn bg-gray-200 p-2 rounded-md">Close</button>
-								</form>
-							</div> -->
-						</div>
-					</dialog>
-				</li>
-
-
 				<!-- 6 Team -->
 				<li class="flex justify-center bg-gray-100 flex-col p-4 rounded-2xl shadow-lg mb-8">
 
@@ -413,7 +409,7 @@
 							Dayal Chand Yadav
 						</h1>
 						<h4 class="text-second text-center">
-							Political Constant
+							Political Consultant
 						</h4>
 					</button>
 
