updated styling of about and ourwork page

--- a/our-work.html
+++ b/our-work.html
@@ -136,7 +136,7 @@
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
 						<img src="./public/image/women-empowerment/gallery-img-8.JPG"
-							class="object-fill  h-104 w-full rounded-lg " alt="logo">
+							class="object-fill w-full rounded-lg " alt="logo">
 					</div>
 
 				</div>
@@ -151,7 +151,7 @@
 
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
-						<img src="./public/image/gallery/education.JPG" class="object-fill  h-104 w-full rounded-lg "
+						<img src="./public/image/gallery/education.JPG" class="object-fill w-full rounded-lg "
 							alt="logo">
 					</div>
 
@@ -203,7 +203,7 @@
 					</div>
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
-						<img src="./public/image/gallery/health.JPG" class="object-fill  h-104 w-full rounded-lg "
+						<img src="./public/image/gallery/health.JPG" class="obje w-full rounded-lg "
 							alt="logo">
 					</div>
 
@@ -219,7 +219,7 @@
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
 						<img src="./public/image/legal-aid/gallery-img-11.JPG"
-							class="object-fill  h-104 w-full rounded-lg " alt="logo">
+							class="object-fill w-full rounded-lg " alt="logo">
 					</div>
 
 					<div class="mt-12 lg:mt-0">
@@ -269,7 +269,7 @@
 
 					<div class="mb-12 lg:mb-0 sm:place-self-center w-full">
 						<img src="./public/image/gallery/gallery-img-14.JPG"
-							class=" object-fill  h-104 w-full rounded-lg " alt="vocational training">
+							class=" object-fill w-full rounded-lg " alt="vocational training">
 					</div>
 				</div>
 			</div>
