updated images of team page

--- a/team.html
+++ b/team.html
@@ -226,7 +226,7 @@
 
 					<button class="btn p-4 rounded-t-lg " onclick="my_modal_3.showModal()">
 
-						<img class="aspect-[2/2] rounded-full p-12  " src="public/image/team/" alt="">
+						<img class="aspect-[2/2] rounded-full p-12  " src="public/image/team/raziya mansoori.jpeg" alt="">
 
 						<h1 class="text-2xl text-center">
 							Razia Mansoori
